attempt to fix clickable area for collapse on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,7 +38,7 @@ body {
 
 .panel-heading h4 {
   display: inline-block;
-  background-color: rgba(255,255,255,0.5);
+  background-color: rgba(255,255,255,0.7);
   padding: 3px;
   border-radius: 2px;
   /*
@@ -50,7 +50,7 @@ body {
 
 .panel-heading p {
   display: inline-block;
-  background-color: rgba(255,255,255,0.5);
+  background-color: rgba(255,255,255,0.7);
   padding: 3px;
   border-radius: 2px;
   
@@ -60,12 +60,13 @@ body {
   height: 10px;
 }
 
-.panel-heading a {
+.panel-heading img {
   /*background-color: rgba(255,255,255,0.2);*/
   /*border-radius: 2px;*/
   text-align: center;
   position: absolute;
   bottom: 0;
+  padding: 2px;
   left: 50%;
   transform: translate(-50%);
 }
